src/jg/coop/css/layout/_main-sections.scss
.main-sections {
  @extend .container-fluid;
  padding-right: 0;
  padding-left: 0;
}

.section {
  @extend .container-lg;
  padding-top: $main-spacer - $spacer;
  padding-bottom: $main-spacer - $spacer;
}

.section.standout {
  padding: $main-spacer 0;
  margin-top: 0;
  margin-bottom: 0;
}

.section .headerlink {
  @extend .visually-hidden;
}

.section-background.dark {
  color: $white;
  background: $jg-dark;
}

.section-background.blue {
  color: $white;
  background: $jg-blue;
}

.section-background.blue-light {
  background: $jg-blue-light;
}

.section-background.yellow {
  background: $jg-yellow;
}

.section-background.yellow-light {
  background: $jg-yellow-light;
}

.section-background.gray-white {
  background: $jg-gray-white;
}

